--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -11,7 +11,7 @@ jobs:
   build-latex:
     runs-on: ubuntu-latest
     container:
-      image: blang/latex:ubuntu
+      image: blang/latex:ctanbasic
 
     steps:
       - name: Checkout repository
