--- a/.github/workflows/build-latex.yml
+++ b/.github/workflows/build-latex.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   build-latex:
     runs-on: ubuntu-latest
+    container: cristiangreco/pdflatex
 
     steps:
       - name: Checkout repository
